z-index fix

--- a/src/components/Dropdown.scss
+++ b/src/components/Dropdown.scss
@@ -6,6 +6,7 @@
   width: 100%;
   background-color: white;
   border: 1px solid $dividergray;
+  z-index: 1;
 }
 
 .dropdownNav {
