--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -24,7 +24,6 @@ h2 {
     position: relative;
     h1 {
       padding-top: 60px;
-      z-index: 1000;
       position: relative;
       color: white;
     }
